refactor: Renaming of Application.TodoTask to Application.TodoTasks refactor: Reimplement UnitOfWork

--- a/src/TaskManager.Application/TaskManager.Application.csproj
+++ b/src/TaskManager.Application/TaskManager.Application.csproj
@@ -8,8 +8,11 @@
 
   <ItemGroup>
     <Compile Remove="Task\**" />
+    <Compile Remove="TodoTask\**" />
     <EmbeddedResource Remove="Task\**" />
+    <EmbeddedResource Remove="TodoTask\**" />
     <None Remove="Task\**" />
+    <None Remove="TodoTask\**" />
   </ItemGroup>
 
   <ItemGroup>
