--- a/src/TaskManager.Domain.Common/TaskManager.Domain.Common.csproj
+++ b/src/TaskManager.Domain.Common/TaskManager.Domain.Common.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TaskManager.Application.Common\TaskManager.Application.Common.csproj" />
+  </ItemGroup>
+
 </Project>
