--- a/src/TaskManager.Apps.API/TaskManager.Apps.API.csproj
+++ b/src/TaskManager.Apps.API/TaskManager.Apps.API.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TaskManager.Infrastructure.Repositories\TaskManager.Infrastructure.Repositories.csproj" />
+  </ItemGroup>
+
 </Project>
